# mechbot-2x

./: .Dockerfile  .Makefile  .Webhooks  .checksums  .checksums.valid  .env  .env.production  .env.vault  .gitignore  .gitmodules  .pre-commit-config.yaml  API_REFERENCE,md  ARCHITECTURE.md  AnexoA_Especificaciones_MechBot2.0x.md  Ci.yml  Dockerfile  Dockerfile.secure  Makefile  Pipeline  README.md  SECURITY.md  STRUCTURE.md  STRUCTURE.txt  audit.sh  control_servidor.sh  coverage.xml  deploy-4d.sh  docker-compose.test.yml  docker-compose.yml  dockerfile  env.production  env.sample  get_helm.sh  install  jwt  mkdocs.yml  package-lock.json  pipeline  pyproject.toml  requirements.txt  (+1 more)
.github/: dependabot-yml  dependabot.yml  quality-assurance.yaml
.github /: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE/bug/: report.md
.github/ISSUE_TEMPLATE/feature/: request.md
.github/actions/workflows/: ci-cd.yml
.github/workflow/: Ci.yml
.github/workflows/: ci-cd.yml  ci-core.yml  docs.yml  generator-generic-ossf-slsa3-publish.yml  integration-test.yml  multi-arch.helm  publish.yml  revive.yml
.github/workflows/generator/: generate_data_flow.yml
.github/workflows/multi-arch/: helm.yml
.vault/: .env  .env.monitoring  env.encrypted  env.production  env.samples
3-technical/embedded/: firmware.py
`infra/hardware/: README.md
`monitoring/: secret-access-logs.ndjson`
`src/core/security/: tls_config.py  tls_config.py`
api/: main.py  models.py
api/routes/: diagnosis.py
api/services/: auth.py
app/3d-dashboard/: ARCHITECTURE.md  STRUCTURE.[3d-dashboard].txt
app/src/engine/: ws-config 1.js  ws-config.js
config/: services-config.yaml
config/canbus/: can0.conf
config/cassandra/: security.yaml
config/kafka/schemas/: telemetry.avsc  telemetry.avsc`
config/services/: config.yaml
core/ai_engine/: predict.py
deploy/: .env (Cifrado con Ansible Vault):  4d-integration.yaml  4d.sh  KUBERNETES_SETUP.md  edge_device.py  rollback_policy.yaml
deploy/KUBERNETES/: SETUP.md
deploy/efk/: security-dashboard.ndjson
deploy/helm/: mechbot.helmfile.yaml  values-auto.yaml  values-secrets.yaml
deploy/kubernetes/: rotate-secrets-cron.yaml  setup.py
deploy/monitoring/: falco-rules.yaml
deploy/network/: security-groups.prod.yaml
deploy/platform/: values-3d.yaml
deploy/security/: network-policy.yaml  pod-security-policy.yaml
deploy/vault/: policies.hcl
diagrams/: extract_mermaid.sh  viewer.html
diagrams/mermaid/: 4D_COMMS_PROTOCOL_1.mmd  4D_COMMS_PROTOCOL_2.mmd  4D_DATA_FLOW_1.mmd  4D_DEPLOYMENT_1.mmd  4D_DEPLOYMENT_2.mmd  ARCHITECTURE_1.mmd  ARCHITECTURE_2.mmd  ARCHITECTURE_3.mmd  ARCHITECTURE_4.mmd  ARCHITECTURE_5.mmd  AUTOMATED_DEPLOY_1.mmd  REALTIME_DASHBOARDS_1.mmd  Resumen Técnico Unificado - MechBot 2.0x_1.mmd  TEAM_HANDBOOK_1.mmd  TEAM_HANDBOOK_2.mmd  flowchart TD_2.mmd  flowchart.td  flowchart_TD_1.mmd  flowchart_TD_2.mmd  flowchart_TD_3.mmd
docker_build/: Dockerfile  data_flow4D.py  requirements.txt
dockerfiles/: Dockerfile  Dockerfile.api
docs/: DOCUMENTATION_INDEX.md  README.md  STRUCTURE.md  deployment_log.md  index.md
docs/ diagrams/: flowchart TD
docs/Arquitectura 4D/: flowchart TD.md
docs/ai/: NLP_CHATBOT.md
docs/api/: GRPC_PROTOCOLS.md  REST_API.md
docs/api/REST/: API.md
docs/api/v2/: telemetry.json
docs/architecture/: 4D_ARCHITECTURE.md  4D_ARCHITECTURE.mmd  4D_COMMS_PROTOCOL.md  4D_DATA_FLOW.md  4D_DEPLOYMENT.md  ARCHITECTURE.md  AUTOMATED_DEPLOY.md  AnexoA_Especificaciones_MechBot2.0x.md  flowchart_TD.md
docs/config/canbus/: can0.conf
docs/deployment/: AUTOMATED_DEPLOY.md
docs/engineering/: TEAM_HANDBOOK.md  flowchart_TD.md
docs/monitoring/: REALTIME_DASHBOARDS.md  alert-rules.yml
docs/monitoring/otel-collector/: config.yaml
docs/monitoring/prometheus/: prometheus.yml
docs/producción/: Resumen Técnico Unificado - MechBot 2.0x.md
docs/scripts/: deploy-prod.yml
docs/security/: DEPENDENCY-POLICY.md  GUIDELINES.md  INCIDENT_RESPONSE.md  SECURITY.md  UPDATE-PROCESS.md  multi-ecosystem.md
docs/technical/: architecture
frontend/: package-lock.json  package.json
frontend/api/: main.py  requirements.txt
frontend/docs/mechbot.io/: v2.md
frontend/src/components/: EngineModel.jsx
github/: dependabot.yml
infra/: main.tf  user.md
infra /hardware/: README.md
infra/hardware/: README.md
infra/k8s/: values.yaml
kubernetes/secrets/templates/: secret-template.yaml
monitoring/: alert-rules.yml  dashboard.py  secret-access-logs.jons  secret-access-logs.ndjson
monitoring/otel-collector/: config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/siem/: alerts-rules.yml
proto/telemetry/v2/: mechbot.proto
protobuf/: workshop.proto
scripts/: build.sh  check_jwt_consistency.sh  check_jwt_security.sh  convert_model.py  debug_jwt.py  debug_jwt_detailed.py  find_free_port.py  generate_diagrams.py  generate_token.py  rotate_jwt_secret.sh  run_and_test.sh  setup_env.sh  start.sh  sync_repo.sh  test_api.sh  test_api_complete.sh  test_diagnose.py  verify_fix.sh  verify_jwt_consistency.sh  verify_token.py
scripts/security/: rotate-secrets.sh
security/: SECURITY_POLICY.md  jwt_manager.py
security/SECURITY/: POLICY.md
security/alerts/: brute-force-detection.yaml
security/secret-management/: directory-structure.md
security/vault/: config.hcl
site/: 404.html
site/Arquitectura 4D/flowchart TD/: index.html
site/DOCUMENTATION_INDEX/: index.html
site/STRUCTURE/: index.html
site/Técnica/Sistem. Diagnostic_tiempo_real/: index.html
site/ai/DIAGNOSIS_MODELS/: index.html
site/ai/NLP_CHATBOT/: index.html
site/anexos/AnexoA_Especificaciones_MechBot2.0x/: index.html
site/search/: search_index.json
src/: Dockerfile
src/core/: config.py  data_flow.py  data_flow1.py
src/mechbot/: __init__.py
src/services/: README.md
test/: LOAD_.TESTING.md  LOAD_TESTING.md`  STRESS_TEST_PROTOCOL.md  integration-test.yml
test/STRESS/: TEST_PROTOCOL.md
test/can/: stress.py
test/k6/: telemetry_test.js
tests/integration/: test_docker.py
(+44 files in other folders)
