[project]
name = "mechbot-core"
dynamic = ["version"]
description = """
Plataforma de diagnóstico automotriz inteligente que combina:
- Análisis predictivo mediante IA/ML
- Integración con sistemas vehiculares (OBD-II/CAN)
- Gestión de talleres en tiempo real
"""
authors = [
    {name = "Equipo de Ingeniería MechBot", email = "core-dev@mechbot.tech"},
    {name = "Departamento de IA", email = "ai-team@mechbot.tech"}
]
maintainers = [
    {name = "Soporte Técnico", email = "support@mechbot.tech"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Automotive Technicians",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License"
]

[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.40.0",
    "setuptools_scm>=8.0.0"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
ai = [
    "onnxruntime-gpu>=1.14.1,<2.0.0",
    "scikit-learn>=1.5.1,<2.0.0",
    "transformers[torch]>=4.30.2,<5.0.0"
]

vehicle = [
    "python-obd>=0.7.1,<0.8.0",
    "cantools>=37.2.0,<38.0.0",
    "pyserial>=3.5,<4.0"
]

workshop = [
    "grpcio>=1.54.3,<2.0.0",
    "protobuf>=4.23.2,<5.0.0"
]

dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipdb>=0.13.9"
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0"
]

[tool.setuptools_scm]
write_to = "src/mechbot/_version.py"
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "W", "F", "I", "UP", "RUF"]
ignore = ["D203", "D212", "E501"]
unfixable = ["F401"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestRemovedIn8Warning"
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["**/__init__.py", "**/_version.py"]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["mechbot*"]
exclude = ["tests*", "experimental*"]
